# karaoke-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  azure-pipelines.yml
ci/aarch64-unknown-linux-gnu/: Dockerfile
ci/armv7-unknown-linux-gnueabihf/: Dockerfile
embed/config/: config.yaml
embed/static/: 1.karaoke-rs.js  karaoke-rs.js  karaoke-rs.wasm  queue.json  script.js  styles.css  table.js
embed/templates/: 404.html  artist.html  artists.html  base.html  header.html  index.html  queue.html  songs.html
frontend/: .gitignore  Cargo.toml  LICENSE-MIT  README.md  bootstrap.js  package.json  rustfmt.toml  webpack.config.js
frontend/src/: agents.rs  app.rs  components.rs  lib.rs  model.rs  pages.rs
frontend/src/agents/: api.rs  player.rs  toast.rs
frontend/src/components/: pagination.rs  toast.rs  toast_container.rs
frontend/src/pages/: artist.rs  artists.rs  index.rs  player.rs  queue.rs  songs.rs
frontend/static/: index.html  styles.css
src/: channel.rs  collection.rs  config.rs  embed.rs  main.rs  player.rs  queue.rs  site.rs  websocket.rs  worker.rs
templates/: artist.html.tera  artists.html.tera  index.html.tera  queue.html.tera  songs.html.tera
