[package]
name = "karaoke-rs"
version = "0.5.1"
authors = ["Cory Forsstrom <cforsstrom18@gmail.com>"]
edition = "2018"

[dependencies]
glium = "0.25.0"
cdg = "0.1"
cdg_renderer = "0.1"
image = "0.10.0"
glob = "0.3.0"
id3 = "0.3.0"
failure = "0.1.1"
serde_derive = "1.0.0"
serde = "1"
lazy_static = "1.3.0"
dirs = "1.0.5"
crossbeam-channel = "0.3"
clap = "2.33.0"
rust-embed="4.3.0"
rayon = "1.0"
tera = "0.11"
actix-web = "1.0.0"
actix-files = "0.1.1"
env_logger = "0.6"

[dependencies.rodio]
version = "0.8.1"
default-features = false
features = ["mp3"]

[dependencies.rustbreak]
version = "2.0.0-rc3"
features = ["yaml_enc"]

[patch.crates-io]
nix = { git = "https://github.com/tarkah/nix/", rev = "b104e58cff878e565f63a82728c24f2c14ee74dd" }
rodio = { git = "https://github.com/tomaka/rodio/", rev = "dba627a1b4b0562b6b30b17befc3108e356f3e6c" }