[package]
name = "karaoke-rs"
version = "0.7.0"
authors = ["tarkah <admin@tarkah.dev>"]
edition = "2018"

[workspace]
members = [
    ".",
    "frontend"
]

[dependencies]
glium = "0.25"
cdg = "0.1"
cdg_renderer = "0.1"
image = "0.10"
glob = "0.3"
id3 = "0.3"
failure = "0.1"
serde = { version = "1.0", features = ['derive'] }
lazy_static = "1.3"
dirs = "1.0"
crossbeam-channel = "0.3"
clap = "2.33"
rust-embed="4.3"
rayon = "1.0"
actix-web = "1.0"
actix-files = "0.1"
env_logger = "0.6"

[dependencies.rodio]
version = "0.9"
default-features = false
features = ["mp3"]

[dependencies.config]
version = "0.9"
default-features = false
features = ['yaml']

[dependencies.rustbreak]
version = "2.0.0-rc3"
features = ["yaml_enc"]