[package]
name = "karaoke-rs-frontend"
authors = ["tarkah <admin@tarkah.dev>"]
edition = "2018"
license = "MIT"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.11"
yew-router = "0.8.1"

cdg = "0.1"
cdg_renderer = "0.3"
image = "0.22"

log = "0.4"
web_logger = "0.2"
failure = "0.1"
serde = { version = "1", features = ['derive'] }
serde_urlencoded = "0.5"
percent-encoding = "2.1"

wee_alloc = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-events = "0.1.1"

[dependencies.web-sys]
version = "0.3"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'CanvasRenderingContext2d',
    'Location',
    'AudioContext',
    'AudioBufferSourceNode',
    'AudioBuffer',
    'AudioNode',
    'AudioDestinationNode',
    'ImageData'
]