[package]
name = "karaoke-rs-frontend"
authors = ["tarkah <admin@tarkah.dev>"]
edition = "2018"
license = "MIT"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#yew = { path = "../../external/yew" } #"0.11"
yew = {git = "https://github.com/yewstack/yew", branch = "web-sys", features = ["web_sys","agent","services"]}
yew-router = {git = "https://github.com/tarkah/yew_router", branch = "web-sys", features = ["web_sys"]}

cdg = "0.1"
cdg_renderer = "0.3"
image = { version = "0.22", default-features = false }

log = "0.4"
wasm-logger = "0.2"
anyhow = "1.0"
serde = { version = "1", features = ['derive'] }
serde_urlencoded = "0.5"
percent-encoding = "2.1"

wee_alloc = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-events = "0.1.1"

[dependencies.web-sys]
version = "0.3"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlDivElement',
    'HtmlButtonElement',
    'HtmlParagraphElement',
    'Window',
    'CanvasRenderingContext2d',
    'Location',
    'AudioContext',
    'AudioContextState',
    'AudioBufferSourceNode',
    'AudioBuffer',
    'AudioNode',
    'AudioDestinationNode',
    'ImageData',
    'CssStyleDeclaration'
]